[gd_scene load_steps=2 format=2]

[ext_resource path="res://CM/Localization/LocalizationSetting.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Centerer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="Centerer"]
margin_left = 312.0
margin_top = 89.0
margin_right = 487.0
margin_bottom = 511.0

[node name="Label" type="Label" parent="Centerer/Content"]
margin_right = 175.0
margin_bottom = 24.0
text = "Language Settings"
align = 1

[node name="LocalePanel" type="PanelContainer" parent="Centerer/Content"]
margin_top = 28.0
margin_right = 175.0
margin_bottom = 104.0

[node name="Container" type="VBoxContainer" parent="Centerer/Content/LocalePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 168.0
margin_bottom = 69.0

[node name="ErrorMessage" type="Label" parent="Centerer/Content/LocalePanel/Container"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = -7.0
margin_top = -7.0
margin_right = 153.0
margin_bottom = 7.0
text = "DUMMY ERROR MESSAGE"

[node name="Timer" type="Timer" parent="Centerer/Content/LocalePanel/Container/ErrorMessage"]
wait_time = 3.0

[node name="LocalesContainer" type="VBoxContainer" parent="Centerer/Content/LocalePanel/Container"]
margin_right = 161.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="Centerer/Content/LocalePanel/Container/LocalesContainer"]
margin_right = 161.0
margin_bottom = 24.0
text = "Installed Locales:"
align = 1

[node name="Locales" type="VBoxContainer" parent="Centerer/Content/LocalePanel/Container/LocalesContainer"]
margin_top = 28.0
margin_right = 161.0
margin_bottom = 28.0

[node name="CreateLocaleButton" type="Button" parent="Centerer/Content/LocalePanel/Container/LocalesContainer"]
margin_top = 32.0
margin_right = 161.0
margin_bottom = 62.0
text = "+"

[node name="GlobalTranslationsPanel" type="PanelContainer" parent="Centerer/Content"]
margin_top = 108.0
margin_right = 175.0
margin_bottom = 422.0
hint_tooltip = "Here, you can put all translations that are not connected to any particular content (Such as main menu button texts)."

[node name="TranslationScroll" type="ScrollContainer" parent="Centerer/Content/GlobalTranslationsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 168.0
margin_bottom = 307.0
rect_min_size = Vector2( 0, 300 )
scroll_horizontal_enabled = false

[node name="TranslationsContainer" type="VBoxContainer" parent="Centerer/Content/GlobalTranslationsPanel/TranslationScroll"]
margin_right = 161.0
margin_bottom = 62.0

[node name="TranslationsLabel" type="Label" parent="Centerer/Content/GlobalTranslationsPanel/TranslationScroll/TranslationsContainer"]
margin_right = 161.0
margin_bottom = 24.0
text = "Global Translations"

[node name="Translations" type="VBoxContainer" parent="Centerer/Content/GlobalTranslationsPanel/TranslationScroll/TranslationsContainer"]
margin_top = 28.0
margin_right = 161.0
margin_bottom = 28.0

[node name="AddTranslationButton" type="Button" parent="Centerer/Content/GlobalTranslationsPanel/TranslationScroll/TranslationsContainer"]
margin_top = 32.0
margin_right = 161.0
margin_bottom = 62.0
text = "+"

[node name="LocaleConfirm" type="ConfirmationDialog" parent="."]
margin_left = 590.0
margin_top = 362.0
margin_right = 790.0
margin_bottom = 458.0
window_title = "Type in a locale code"

[node name="LocaleCode" type="TextEdit" parent="LocaleConfirm"]
margin_left = 8.0
margin_top = 8.0
margin_right = 217.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocaleDelete" type="ConfirmationDialog" parent="."]
margin_left = 588.0
margin_top = 356.0
margin_right = 788.0
margin_bottom = 426.0
window_title = "Potvrďte prosím..."
dialog_text = "Dummy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TranslationConfirm" type="ConfirmationDialog" parent="."]
margin_left = 563.0
margin_top = 330.0
margin_right = 813.0
margin_bottom = 508.0
rect_min_size = Vector2( 250, 70 )
window_title = "Potvrďte prosím..."
dialog_text = "Type in a translation key (all caps
recommended)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TranslationCode" type="TextEdit" parent="TranslationConfirm"]
margin_left = 8.0
margin_top = 59.0
margin_right = 287.0
margin_bottom = 159.0
rect_min_size = Vector2( 100, 100 )

[node name="TranslationKeyDelete" type="ConfirmationDialog" parent="."]
visible = true
margin_left = 586.0
margin_top = 358.0
margin_right = 786.0
margin_bottom = 428.0
window_title = "Potvrďte prosím..."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="Centerer/Content/LocalePanel/Container/ErrorMessage" to="Centerer/Content/LocalePanel/Container/ErrorMessage/Timer" method="start"]
[connection signal="timeout" from="Centerer/Content/LocalePanel/Container/ErrorMessage/Timer" to="Centerer/Content/LocalePanel/Container/ErrorMessage" method="hide"]
[connection signal="pressed" from="Centerer/Content/LocalePanel/Container/LocalesContainer/CreateLocaleButton" to="." method="_on_CreateLocaleButton_pressed"]
[connection signal="pressed" from="Centerer/Content/GlobalTranslationsPanel/TranslationScroll/TranslationsContainer/AddTranslationButton" to="." method="_on_AddTranslationButton_pressed"]
[connection signal="confirmed" from="LocaleConfirm" to="." method="_on_LocaleConfirm_confirmed"]
[connection signal="confirmed" from="LocaleDelete" to="." method="_on_LocaleDelete_confirmed"]
[connection signal="confirmed" from="TranslationConfirm" to="." method="_on_TranslationConfirm_confirmed"]
[connection signal="confirmed" from="TranslationKeyDelete" to="." method="_on_TranslationKeyDelete_confirmed"]
